# https://pypi.org/project/setupcfg-generator/
[metadata]
name = gist-id
version = 2019.4.23
url = https://github.com/looking-for-a-job/gist-id
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gist

[options]
install_requires = 
	setuptools
scripts = 
	scripts/gist-id
